tests/rosetta/out/Pascal/averages-root-mean-square.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/averages-root-mean-square.pas
averages-root-mean-square.pas(15,12) Error: Incompatible types: got "Double" expected "LongInt"
averages-root-mean-square.pas(19,24) Error: Operator is not overloaded: "Double" div "LongInt"
averages-root-mean-square.pas(44) Fatal: There were 2 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
