tests/rosetta/out/Pascal/averages-root-mean-square.pas
// Generated by Mochi compiler v0.10.26 on 2025-07-16T10:01:23Z
program AveragesRootMeanSquare;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, fphttpclient, Classes, Variants, fpjson, jsonparser, fpjsonrtti;

type
  generic TArray<T> = array of T;

function sqrtApprox(x: double): double;
var
  guess: integer;
  i: integer;
begin
  guess := x;
  i := 0;
  while (i < 20) do
  begin
    guess := guess + x div guess div 2;
    i := i + 1;
  end;
  result := guess;
  exit;
end;

var
  n: integer;
  rms: double;
  sum: double;
  x: integer;

begin
  n := 10;
  sum := 0;
  x := 1;
  while (x <= n) do
  begin
    sum := sum + Double(x) * Double(x);
    x := x + 1;
  end;
  rms := sqrtApprox(sum / Double(n));
  writeln(FloatToStr(rms));
end.
